--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     </header>
     <figure class="cover-image"></figure>
     <main class="content">
-        <section class="main-content-block">
+        <section class="main-content-block" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An open notebook with a graphic outlining search Engine Optimization features including: Content, Headings, Mobile Compatibility, Social Media, Link Building, and Backlink." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="main-content-block">
+        <section class="main-content-block" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="An open laptop with charts and a bold headline that reads: Reputation" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="main-content-block">
+        <section class="main-content-block" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A meeting table with several internet related icons and the words: Like, Tweet, Share, and Media" />
             <h2>Social Media Marketing</h2>
             <p>
